[package]
name = "strand_match"
version = "0.1.0"
authors = ["ComplexPlane <comlexplanegames@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strsim = "0.9.2"
roxmltree = "0.7.1"
regex = "1.3.1"
lazy_static = "1.4.0"
byteorder = "1.3.2"
failure = "0.1.6"
