[package]
name = "strand_match"
version = "0.1.1"
authors = ["ComplexPlane <comlexplanegames@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
strsim = "0.9.2"
roxmltree = "0.7.1"
regex = "1.3.1"
byteorder = "1.3.2"
lazy_static = "1.4.0"
