[package]
name = "strand_match"
version = "0.1.1"
authors = ["ComplexPlane <comlexplanegames@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
byteorder = "1.5.0"
regex = "1.10.6"
roxmltree = "0.20.0"
strsim = "0.11.1"
